--- a/app/views/citizens/index.html.erb
+++ b/app/views/citizens/index.html.erb
@@ -1,5 +1,25 @@
-<h1>Buscar Ciudadano</h1>
-<%= form_tag search_path, method: :get do %>
-  <%= text_field_tag :q, params[:q], placeholder: "Nombre, Apellido o RUT" %>
-  <%= submit_tag "Buscar" %>
-<% end %>
+
+<div class="row">
+  <div class="col">
+  </div>
+  <div class="col">
+    <%= form_tag search_path, method: :get do %>
+    
+      <div class="card">
+        <div class="card-body">
+
+          <div class="mb-3">
+            <%= text_field_tag :q, params[:q], { class: "form-control", placeholder: "Nombre, Apellido o RUT" } %>
+          </div>
+
+          <%= submit_tag "Buscar", class: "btn btn-primary" %>
+
+        </div>
+      </div>
+    <% end %>
+  </div>
+  <div class="col">
+  </div>
+</div>
+
+
