--- a/app/views/citizens/search.html.erb
+++ b/app/views/citizens/search.html.erb
@@ -1,7 +1,8 @@
-<h2>Resultados de la Búsqueda para: <%= @query %></h2>
+<h2>Resultados de la búsqueda para: <%= @query %></h2>
+
 
 <% if @citizens.any? %>
-  <table>
+  <table class="table">
     <thead>
       <tr>
         <th>Nombre</th>
